// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processes find adds force to the result with --force 1`] = `
Array [
  Object {
    "id": "Zazu",
    "subtitle": "zazu",
    "title": "Zazu",
    "value": Object {
      "force": true,
      "id": 222,
      "name": "Zazu",
    },
  },
]
`;

exports[`processes find adds force to the result with -f 1`] = `
Array [
  Object {
    "id": "Zazu",
    "subtitle": "zazu",
    "title": "Zazu",
    "value": Object {
      "force": true,
      "id": 222,
      "name": "Zazu",
    },
  },
]
`;

exports[`processes find filters processes with given input 1`] = `
Array [
  Object {
    "id": "Zazu",
    "subtitle": "zazu",
    "title": "Zazu",
    "value": Object {
      "force": false,
      "id": 222,
      "name": "Zazu",
    },
  },
]
`;

exports[`processes find lists processes 1`] = `
Array [
  Object {
    "id": "node",
    "subtitle": "node index.js",
    "title": "node",
    "value": Object {
      "force": false,
      "id": 111,
      "name": "node",
    },
  },
  Object {
    "id": "Zazu",
    "subtitle": "zazu",
    "title": "Zazu",
    "value": Object {
      "force": false,
      "id": 222,
      "name": "Zazu",
    },
  },
  Object {
    "id": "Atom",
    "subtitle": "atom",
    "title": "Atom",
    "value": Object {
      "force": false,
      "id": 333,
      "name": "Atom",
    },
  },
]
`;
